fix leaf categories